# tourdeapp-deployment-system

./: .gitignore  README.md
.github/workflows/: deploy_production.yml  deploy_production_release.yml  deploy_staging.yml
ansible/: README.md  hosts.ini.example  main.yaml
ansible/roles/auth/tasks/: main.yml
ansible/roles/docker/tasks/: main.yml
ansible/roles/dynamic_deploy/tasks/: main.yml
ansible/roles/dynamic_deploy/vars/: main.yml
ansible/roles/monitoring/files/: loki-config.yml  ntopng_conf.json  promtail-config.yml
ansible/roles/monitoring/tasks/: grafana-prometheus-datasource.yml  main.yml  tda-dashboard.json
ansible/roles/redis/tasks/: main.yml
basic_auth/: Dockerfile  app.py  entrypoint.sh
ghost_api/: Dockerfile  Pipfile  app.py  entrypoint.sh  persistance.py  scrape.py
python_container_deploy_app/: Dockerfile  Dockerfile.worker  Pipfile  api_specification.yml  app.py  entrypoint.sh  tasks.py  worker.py
python_container_deploy_app/src/: app.py  async_rq.py  docker.py  docker_deploy.py  persistance.py  tasks.py  worker.py
python_container_deploy_app/src/shared/: utils.py
python_container_deploy_app/src/tasks/: callback.py  delete_tasks.py  run_tasks.py  start_tasks.py
python_container_deploy_app/testsuite/: config.ini.example  conftest.py  test_heavy_load.py  test_standard_proces.py
testsuite/: config.ini.example  pyproject.toml
testsuite/docker_image_always_fail/: Dockerfile
testsuite/integration_tests/: conftest.py  test_custom_registry.py  test_failing_deployment.py  test_heavy_load.py  test_standard_proces.py
(+10 files in other folders)
