[tool.poetry]
name = "container-deploy-app-testsuite"
version = "0.1.0"
description = "Testsuite for the container-deploy-app"
authors = ["David Rajnoha <drajnoha@seznam.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
ansible-runner = "^2.3.4"
aiohttp = "^3.8.5"
backoff = "^2.2.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
